--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>浏览页面</title>
     <link rel="stylesheet" href="content/css/main.css">
+    <link rel="stylesheet" href="content/css/maga01.css">
 </head>
 <body>
 <!-- 政委专用，椰子爱政委么么哒 -->
