--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="qzy-footer">
-            <div class="qzy-info">这里写一点提示文字</div>
+            <div class="qzy-info">使用「←」「→」键也可以翻页哦~</div>
         </div>
     </div>
 </div>
