--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         </div>
         <div class="qzy-footer">
             <div class="qzy-info">使用「←」「→」键也可以翻页哦~</div>
+            <audio id="nav-sound" preload="auto">
+                <source src="content/sound/drop.ogg">
+                <source src="content/sound/drop.mp3">
+            </audio>
         </div>
     </div>
 </div>
