--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="qzy-main">
             <div class="qzy-magazine cf">
                 <div class="qzy-page-bar">
-                    <a href="#">上一页</a>
-                    <a href="#">下一页</a>
+                    <a href="#" data-page="0">上一页</a>
+                    <a href="#" data-page="0">下一页</a>
                 </div>
                 <div class="qzy-catalog">
                     <div class="qzy-catalog-nav">
@@ -59,6 +59,9 @@
     您的窗口/浏览器无法支持在线版浏览，请将窗口最大化<br>
     或点击下载电子版：<a id="download" href="#">点击我</a>
 </div>
+<script id="pageTpl" type="text/html">
+    <img src='{{data}}' width='800' heigth='600'>
+</script>
 <script data-main="scripts/catList" src="scripts/require.js"></script>
 </body>
 </html>
