文章和视频链接

--- a/admin/page_edit.html
+++ b/admin/page_edit.html
@@ -17,7 +17,7 @@
             <li role="presentation" class="active"><a href="maga.html">期刊管理</a></li>
             <li role="presentation"><a href="#">热帖管理</a></li>
         </ul>
-        <h2>寻宇纪管理后台<small>一切为了政委</small></h2>
+        <h2>寻宇纪管理后台<small>写点啥呢</small></h2>
     </div>
     <div class="row">
         <div class="col-sm-12 col-md-6">
