--- a/admin/maga.html
+++ b/admin/maga.html
@@ -16,7 +16,7 @@
             <li role="presentation" class="active"><a href="maga.html">期刊管理</a></li>
             <li role="presentation"><a href="#">热帖管理</a></li>
         </ul>
-        <h2>寻宇纪管理后台<small>一切为了政委</small></h2>
+        <h2>寻宇纪管理后台<small>写点啥呢</small></h2>
     </div>
     <nav class="navbar" role="navigation">
         <a href="#" class="btn btn-primary navbar-btn" role="button">新增期刊</a>
