文章和视频链接

--- a/admin/cat_edit.html
+++ b/admin/cat_edit.html
@@ -31,15 +31,14 @@
                     <div class="page-opr pull-right form-inline">
                         转到：
                         <select class="form-control input-sm">
-                            <option>封面</option>
-                            <option>恭心纪</option>
-                            <option>--少恭家族的崛起</option>
-                            <option>--手办追剧欢乐多</option>
-                            <option>--听政委谈少恭</option>
-                            <option>乔少恭大揭秘</option>
-                            <option>视频区</option>
+                            <option>无</option>
+                            <option>--封面</option>
+                            <option>--恭心纪</option>
+                            <option>--乔少恭大揭秘</option>
+                            <option>--视频区</option>
                         </select>
-                        <button class="btn btn-primary btn-sm">新建</button>
+                        <button class="btn btn-primary btn-sm">确定</button>
+                        <button class="btn btn-success btn-sm">新建</button>
                         <button class="btn btn-danger btn-sm">删除</button>
                     </div>
                 </div>
