--- a/admin/maga_edit.html
+++ b/admin/maga_edit.html
@@ -75,6 +75,7 @@
                             <option>乔少恭大揭秘</option>
                             <option>视频区</option>
                         </select>
+                        <button class="btn btn-primary btn-sm">确定</button>
                         <button class="btn btn-danger btn-sm">删除</button>
                     </div>
                     <input type="checkbox">手办追剧欢乐多
