文章和视频链接

--- a/admin/maga_edit.html
+++ b/admin/maga_edit.html
@@ -24,13 +24,13 @@
         <div class="panel-body">
             <form class="form-inline" role="form">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="标题" name="magName">
+                    <input type="text" class="form-control" placeholder="标题" name="magName" value="千载弦歌">
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="样式表" name="magCss">
+                    <input type="text" class="form-control" placeholder="样式表" name="magCss" value="maga01.css">
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="链接" name="magLink">
+                    <input type="text" class="form-control" placeholder="链接" name="magLink" value="http://">
                 </div>
                 <button type="submit" class="btn btn-primary">修改</button>
                 <a href="page_edit.html" type="button" class="btn btn-success navbar-btn">新建一页</a>
