文章和视频链接

--- a/view.html
+++ b/view.html
@@ -68,7 +68,7 @@
 </script>
 <script id="linkTpl" type="text/html">
     <img src='{{data}}' width='800' heigth='600'>
-    <a class="qzy-video" style="top: {{top}}px; left: {{left}}px" href="{{url}}">点击观看</a>
+    <a class="qzy-video" style="top: {{top}}px; left: {{left}}px" href="{{url}}">点击观看（按钮可控制位置）</a>
 </script>
 <script data-main="scripts/catList" src="scripts/require.js"></script>
 </body>
