--- a/admin/maga_edit.html
+++ b/admin/maga_edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head lang="zh-CN">
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>寻宇纪管理后台</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
